# ema

./: .envrc  .ghcid  .gitignore  .hlint.yaml  CHANGELOG.md  README.md  cabal.project  ema.cabal  flake.nix  garnix.yaml  hie.yaml  justfile  treefmt.toml  vira.hs  www
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yaml  ci.yaml  docs.yaml  publish.yaml
docs/: Main.hs  concepts.md  examples.md  features.md  getting-started.md  guide.md  howto.md  index.md  index.yaml  manifest.json  ref.md  showcase.md  start.md  testing.md  topics.md  tutorial.md  tutorial.yaml
docs/concepts/: cli.md  hot-reload.md  logging.md  lvar.md  slug.md  sse.md
docs/getting-started/: basic-site.md  render.md
docs/guide/: asset.md  class.md  compose.md  dynamic.md  filesystem.md  helpers.md  markdown.md  model.md  render.md  route.md  routes.md  site.md  tailwind.md  upgrade.md
docs/guide/helpers/: blaze.md  filesystem.md  markdown.md  tailwind.md
docs/guide/model/: dynamic.md
docs/guide/route/: class.md  example.md  generic.md  prism.md
docs/howto/: file-changes.md  filesystem.md  helpers.md  markdown.md  model.md  render.md  routes.md  tailwind.md  upgrade.md
docs/howto/helpers/: tailwind.md
docs/ref/: haskell-safety.md  hot-reload.md  slug.md
docs/start/: basic-site.md  tutorial.md  upgrade.md
docs/topics/: asset.md  cli.md  hot-reload.md  live-server.md  logging.md  unionmount.md
docs/tutorial/: 00-hello.md  01-routes.md  02-model.md  03-dynamic.md
ema/: CHANGELOG.md  README.md  ema.cabal
ema-examples/: ema-examples.cabal
ema-examples/src/Ema/Example/: Common.hs  Ex02_Clock.hs  Ex03_Store.hs  Ex05_MultiRoute.hs  Ex06_Markdown.hs
ema-examples/src/Ema/Example/Ex03_Store/: store.json
ema-examples/src/Ema/Example/Ex06_Markdown/: index.md  integration-example.el  test.md
ema-extra/: CHANGELOG.md  README.md  ema-extra.cabal
ema-extra/src/Ema/Route/Lib/Extra/: MapRoute.hs  PaginatedRoute.hs  PandocRoute.hs  StaticRoute.hs  StringRoute.hs
ema-generics/: CHANGELOG.md  README.md  ema-generics.cabal
ema-generics/src/Ema/Route/: Generic.hs
ema-generics/src/Ema/Route/Generic/: RGeneric.hs  SubModel.hs  SubRoute.hs  Verification.hs
ema-generics/src/GHC/TypeLits/: Extra.hs
ema-generics/src/GHC/TypeLits/Extra/: Symbol.hs
ema-generics/test/type-errors/: Spec.hs
ema/src/: Ema.hs
ema/src/Ema/: App.hs  Asset.hs  CLI.hs  Dynamic.hs  Generate.hs  Server.hs  Site.hs
ema/src/Ema/Route/: Prism.hs  Url.hs
ema/src/Ema/Route/Lib/: File.hs  Folder.hs  Multi.hs
ema/src/Ema/Route/Prism/: Check.hs  Type.hs
ema/src/Ema/Server/: Common.hs  HTTP.hs  WebSocket.hs
ema/src/Ema/Server/WebSocket/: Options.hs
ema/test/: Spec.hs
ema/test/Ema/: DynamicSpec.hs
ema/www/: ema-error.html  ema-indicator.html  ema-shim.js
src/: Ema.hs
src/Data/: LVar.hs
src/Data/SOP/: Extra.hs
src/Ema/: App.hs  Asset.hs  CLI.hs  Changing.hs  Class.hs  Dynamic.hs  Example.hs  Generate.hs  Layout.hs  Model.hs  Mount.hs  Multi.hs  Route.hs  Server.hs  Site.hs
src/Ema/App/: Env.hs
src/Ema/Example/: Common.hs  Ex00_Hello.hs  Ex01_Basic.hs  Ex01_HelloWorld.hs  Ex02_Basic.hs  Ex02_Bookshelf.hs  Ex02_Clock.hs  Ex02_Store.hs  Ex03_Clock.hs  Ex03_Diary.hs  Ex03_Documentation.hs  Ex03_NeuronSite.hs  Ex03_Store.hs  Ex04_Multi.hs  Ex05_MultiGeneric.hs  Ex05_MultiRoute.hs  HelloWorld.hs  NeuronSite.hs  SimpleSite.hs
src/Ema/Example/Diary/: 2001-07-24.org  2021-04-20.org
src/Ema/Example/Ex03_Store/: store.json
src/Ema/Helper/: Blaze.hs  FileSystem.hs  Markdown.hs  PathTree.hs  Tailwind.hs
src/Ema/Multi/: Generic.hs
src/Ema/Multi/Generic/: Example.hs  Motley.hs  RGeneric.hs
src/Ema/Route/: Class.hs  CtxPrism.hs  Encoder.hs  Extra.hs  Generic.hs  Prefixed.hs  Prism.hs  Slug.hs  Url.hs  UrlStrategy.hs
src/Ema/Route/Encoder/: Check.hs  Type.hs
src/Ema/Route/Generic/: Example.hs  Iso.hs  RGeneric.hs  Sub.hs  SubModel.hs  SubRoute.hs  TH.hs  Verification.hs
src/Ema/Route/Generic/Verification/: Any.hs
src/Ema/Route/Lib/: File.hs  Folder.hs  Multi.hs
src/Ema/Route/Lib/Extra/: MarkdownRoute.hs  PandocRoute.hs  SlugRoute.hs  StaticRoute.hs
src/Ema/Route/Prism/: Check.hs  Type.hs
src/GHC/TypeLits/Extra/: Symbol.hs
src/Optics/: CtxPrism.hs
test/type-errors/: Deriving.hs  README.md
test/type-errors/Deriving/: TH.hs
www/: ema-error.html  ema-shim.js
