cabal-version:      2.4
name:               ema
version:            0.7.2.0
license:            AGPL-3.0-only
copyright:          2021 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web
synopsis:           Static site generator library with hot reload
bug-reports:        https://github.com/srid/ema/issues
homepage:           https://ema.srid.ca/
description:
  Ema is a next-gen Haskell library for building jamstack-style static sites.
  Ema sites are change-aware; in addition to good ol’ static site generation,
  it provides a live server supporting fast hot-reload in the browser on code
  or data change.

extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

flag with-examples
  description: Include examples and their dependencies
  default:     False

library
  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , async
    , base                    >=4.13.0.0 && <=4.17.0.0
    , constraints-extras
    , containers
    , data-default
    , dependent-sum
    , dependent-sum-template
    , directory
    , filepath
    , filepattern
    , generic-optics
    , generics-sop
    , http-types
    , lvar
    , monad-logger
    , monad-logger-extras
    , mtl
    , neat-interpolation
    , optics-core
    , optparse-applicative
    , relude                  >=1.0
    , sop-core
    , text
    , unliftio
    , url-slug
    , wai
    , wai-middleware-static
    , wai-websockets
    , warp
    , websockets

  if flag(with-examples)
    build-depends:
      , blaze-html
      , blaze-markup
      , time

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  exposed-modules:
    Ema
    Ema.App
    Ema.Asset
    Ema.CLI
    Ema.Dynamic
    Ema.Generate
    Ema.Model
    Ema.Multi
    Ema.Route.Class
    Ema.Route.CtxPrism
    Ema.Route.Encoder
    Ema.Route.Generic
    Ema.Route.Prefixed
    Ema.Route.Url
    Ema.Server

  if flag(with-examples)
    other-modules:
      Ema.Example.Common
      Ema.Example.Ex01_Basic
      Ema.Example.Ex02_Store
      Ema.Example.Ex03_Clock
      Ema.Example.Ex04_Multi

  hs-source-dirs:     src
  default-language:   Haskell2010

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages
