cabal-version: 2.4
name:          ema-extra
version:       0.9.0.0
license:       AGPL-3.0-only
copyright:     2022 Sridhar Ratnakumar
maintainer:    srid@srid.ca
author:        Sridhar Ratnakumar
category:      Web
synopsis:      Static site generator library with hot reload
bug-reports:   https://github.com/srid/ema/issues
homepage:      https://ema.srid.ca/
description:
  Ema is a next-gen Haskell library for building jamstack-style static sites.
  Ema sites are change-aware; in addition to good ol’ static site generation,
  it provides a live server supporting fast hot-reload in the browser on code
  or data change.

common extensions
  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  import:           extensions

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base           >=4.13.0.0 && <4.17.0.0.0
    , containers
    , data-default
    , dependent-sum
    , ema
    , ema-generics
    , filepath
    , generics-sop
    , monad-logger
    , optics-core
    , pandoc
    , relude         >=1.0
    , sop-core
    , text
    , time
    , unionmount
    , unliftio
    , url-slug

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds
    -fprint-potential-instances

  exposed-modules:
    Ema.Route.Lib.Extra.PandocRoute
    Ema.Route.Lib.Extra.SlugRoute
    Ema.Route.Lib.Extra.StaticRoute
    Ema.Route.Lib.Extra.StringRoute

  hs-source-dirs:   src
  default-language: Haskell2010

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages
