cabal-version:      2.4
name:               ema-extra
version:            0.10.0.1
license:            AGPL-3.0-only
copyright:          2022 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web
synopsis:           Useful route types for Ema
bug-reports:        https://github.com/srid/ema/issues
homepage:           https://ema.srid.ca/
description:        Useful route types for Ema
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

common extensions
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  import:           extensions

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base           >=4.13.0.0 && <4.99
    , containers
    , data-default
    , dependent-sum
    , ema
    , ema-generics
    , filepath
    , generics-sop
    , monad-logger
    , optics-core
    , pandoc
    , relude         >=1.0
    , sop-core
    , text
    , time
    , unionmount
    , unliftio
    , url-slug

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds
    -fprint-potential-instances

  exposed-modules:
    Ema.Route.Lib.Extra.MapRoute
    Ema.Route.Lib.Extra.PaginatedRoute
    Ema.Route.Lib.Extra.PandocRoute
    Ema.Route.Lib.Extra.SlugRoute
    Ema.Route.Lib.Extra.StaticRoute
    Ema.Route.Lib.Extra.StringRoute

  hs-source-dirs:   src
  default-language: Haskell2010

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages
